# aula19_bootcamp

./: .test.db  Dockerfile  README.md  database.py  exemplo_00.py  main.py  models.py  pyproject.toml  schema.py
