[tool.poetry]
name = "aula19-bootcamp"
version = "0.1.0"
description = ""
authors = ["sch-paulo <pschmitzjr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
